fixed header and uneven padding on menu

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ svg { max-width: 100%; }
     margin:0 auto;
     width:100%;
     text-align: center;
+    
 
     
 }
@@ -61,6 +62,8 @@ svg { max-width: 100%; }
     text-align: center;
     cursor:pointer;
     transition:.3s;
+    padding:10px;
+    
 
 }
 
@@ -482,9 +485,6 @@ z-index:1;
           'social social social social social social'
           'gutter gutter gutter gutter gutter gutter'
           ;
-          grid-gap: 0px;
-          margin: 0 auto;
-          padding:0px;
       }
 
       .iconContainer{
